--- a/frontend/src/user/register/Register.css
+++ b/frontend/src/user/register/Register.css
@@ -11,6 +11,7 @@
     --bg-200: #1f2b3e;
     --bg-300: #374357;
 }
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -90,7 +91,9 @@ body {
     box-sizing: border-box;
     transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
-
+/* .alert #registerpage input[type="password"]  {
+    border-color: red;
+} */
 #registerpage input[type="text"]:focus,
 #registerpage input[type="password"]:focus {
     outline: none;
@@ -120,7 +123,6 @@ body {
 #registerpage input[type="submit"]:active {
     background-color: var(--primary-200);
 }
-
 @media screen and (max-width: 768px) { /* Adjusted breakpoint for better responsiveness */
     #registerpage {
         flex-direction: column;
