Added redirects from Login and Registration panels upon successful creation/authentication

--- a/frontend/src/user/login/Login.css
+++ b/frontend/src/user/login/Login.css
@@ -87,6 +87,13 @@ body {
 #loginpage h1 {
     font-size: 40px;
 }
+.hidden {
+    opacity: 0;
+}
+.showAlert {
+    background-color: #a30000;
+    padding: 5px 10px; 
+}
 #loginpage input[type="text"],
 #loginpage input[type="password"] {
     padding: 12px 15px;
