Hid login page error text when no error is present

--- a/frontend/src/user/login/Login.css
+++ b/frontend/src/user/login/Login.css
@@ -19,7 +19,9 @@ body {
     flex: 1; /* Columns take equal space*/
     min-width: 0; /* Allow flex items to shrink below their content size */
 }
-
+.hidden {
+    opacity: 0;
+}
 
 .imgdiv .logimg { /* Targeting the image by its class within .imgdiv */
     width: 100%;
