--- a/frontend/src/data/datasets/Datasets.css
+++ b/frontend/src/data/datasets/Datasets.css
@@ -14,6 +14,7 @@ body {
     flex-direction: column; 
     min-height: 80vh; 
     overflow: hidden; 
+    margin-top: 400px;
 }
 
 #datasetmenutitle {
